parser/src/snapshots/long_parser__parse_program.snap
---
source: parser/src/lib.rs
expression: node

---
Ok(
    [
        Located {
            inner: FuncDef(
                FuncDef {
                    name: Ident(
                        "main",
                    ),
                    ty: FuncType {
                        ret: Int(
                            Signed,
                        ),
                    },
                    body: BlockStmt(
                        [
                            Located {
                                inner: Return(
                                    Some(
                                        Located {
                                            inner: Literal(
                                                Int(
                                                    Int(
                                                        0,
                                                    ),
                                                ),
                                            ),
                                            loc: None:1:21,
                                        },
                                    ),
                                ),
                                loc: None:1:14,
                            },
                        ],
                    ),
                },
            ),
            loc: None:1:1,
        },
    ],
)
